[package]
name = "bend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
clap = {version= "4.2.2", features=["cargo"]}
clippy = "0.0.302"
crdts = "7.3.0"
quinn = "0.9.3"
rcgen = "0.10.0"
rustls = { version = "0.20.8", default-features = false, features = ["dangerous_configuration"] }
ucan = "0.1.1"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["io-util", "io"] }
futures = "0.3.28"
abao = "0.2.0"
bao = "0.12.1"
kdtree = "0.7.0"
kd-tree = "0.5.1"
diamond-types = "1.0.0"
